[package]
name = "sparx_hash"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = {version = "0.10.0", optional = true}
digest = "0.11.2"

[dev-dependencies]
getrandom = "0.4.2"

[features]
rand = ["dep:rand"]
rng = ["rand"]
std = []

[[example]]
name = "endless_random_bytes"
required-features = ["rng"]